data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_461.wast
;; 2. **Conditional Branch to Unreachable After Loop**:    - **Description**: Design a loop where a conditionally executed branch (`br_if 0`) can lead to an unreachable instruction right after the loop.    - **Constraint Checked**: Ensures conditional branches do not bypass unreachable checks when exiting loops.    - **Unreachable Execution Check**: Verifies that the conditional branch executes correctly and traps at the unreachable instruction if taken.

(assert_invalid
  (module (func $br_if_unreachable_after_loop 
    (loop (result i32) 
      (i32.const 1) 
      (br_if 0 (i32.const 1))
      (unreachable)
    )
  ))
  "type mismatch"
)